ajout de la route quotes qui donne toutes les citations
